<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lrlLoginForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/ic_company" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtFirstField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/drawable_round_edt"
            android:hint="@string/firstFieldName"
            android:paddingRight="5dp"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/edtSecondsField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="5dp"
            android:background="@drawable/drawable_round_edt"
            android:hint="@string/secondsFieldName"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/btnLogin"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/txtIdea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txtIdea"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>