<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <View
        android:id="@+id/viewTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF" />

    <LinearLayout
        android:id="@+id/lrlLoginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/ic_company" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_firstField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtFirstField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/drawable_round_edt"
                    android:drawableRight="@drawable/ic_person_pink_500_24dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_secondsField"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtSecondsField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/drawable_round_edt"
                    android:drawableRight="@drawable/ic_vpn_key_pink_500_24dp"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/txtForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/forget_pwd"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/drawable_oval_button"
                android:text="@string/btnLogin"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/lrlIdeaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1.5dp"
                    android:layout_weight=".35"
                    android:background="@color/material_grey_500" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:gravity="center_horizontal"
                    android:text="@string/idea_connect"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1.5dp"
                    android:layout_weight=".35"
                    android:background="@color/material_grey_500" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lrlSocialContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">


                <include
                    android:id="@+id/btnLoginFb"
                    layout="@layout/include_login_facebook"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" />

                <include
                    android:id="@+id/btnLoginGPlus"
                    layout="@layout/include_login_glus"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>